<resources>
    <string name="app_name">GeoCached</string>
    <string name="server_url">http://exactmark.pythonanywhere.com</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Re-enter password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="geocached">GeoCached</string>
</resources>