<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:id="@+id/container"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="#002196F3"
            android:text="@string/geocached"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:background="#70FFFFFF"
            android:hint="@string/username"

            android:paddingLeft="2dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#70FFFFFF"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#04ea00"
            android:textColor="#ffffff"
            android:text="@string/login"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/not_registered"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textview_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:text="@string/register"
                android:textColor="#2196F3"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
